make multiple & single donation values (and gifts) editable in admin, fix spacing on moments of justice mobile buttons, add Sponsorship Packet field to site options and pull on moments of justice page

--- a/web/app/themes/cfs/assets/styles/admin.scss
+++ b/web/app/themes/cfs/assets/styles/admin.scss
@@ -43,3 +43,16 @@
 .cmb2-tabs .tab-content.current {
   display: block;
 }
+
+.cmb-row.-half {
+  float: left;
+  width: 49%;
+  &:nth-child(2) {
+    float: right;
+    &:after {
+      content: '';
+      display: table;
+      clear: both;
+    }
+  }
+}
