--- a/web/app/themes/cfs/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/cfs/assets/styles/layouts/_pages.scss
@@ -31,7 +31,11 @@
     }
   }
 }
-
+.button-twins {
+  div {
+    margin-bottom: 16px;
+  }
+}
 @include media-md {
   .button-twins {
     .-left {
